--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Sean Zurcher, Micah Demong, Rachel Stanik, Katrina Tran",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/vision": "^1.7.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "pug": "^2.0.4"
