--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "Sean Zurcher, Micah Demong, Rachel Stanik, Katrina Tran",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/vision": "^1.7.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "pug": "^2.0.4"
   }
 }
